# sun50iw12p1-research

./: .gitignore  AGENTS.md  FEL_BACKUP_IMPLEMENTATION_SUMMARY.md  FEL_USB_OVERFLOW_FIX_TESTING.md  FEL_USB_TIMEOUT_FIX_TESTING.md  FEL_USB_TIMEOUT_SUMMARY.md  FEL_USB_WRITE_SUCCESS.md  H713_FEL_FIXES_SUMMARY.md  H713_FEL_PROTOCOL_ANALYSIS.md  KERNEL_BUILD_SUMMARY.md  KERNEL_UPGRADE_6.16.7_SUMMARY.md  README.md  SCTLR_WARNING_ANALYSIS.md  SUNXI_TOOLS_H713_SUMMARY.md  TASK_027_RESEARCH_SUMMARY.md  USING_H713_FEL_MODE.md  V4L2_IMPLEMENTATION_SUMMARY.md  build_metrics_driver.sh  check_memory_layout.txt  configure_h713_kernel.sh  flake.nix  hy300-keystone-motor-with-metrics.c  kernel-sun50i-h713-hy300.dtb  opencode.json  register_interface_enhancement.patch  sun50i-h713-hy300-av1.dtb  sun50i-h713-hy300-h616.dtb  sun50i-h713-hy300-h616.dts  sun50i-h713-hy300-with-ir.dtb  sun50i-h713-hy300-with-nsi.dtb  sun50i-h713-hy300-with-tvcap.dtb  sun50i-h713-hy300.dtb  sun50i-h713-hy300.dts  sunxi-fel-16k-chunks  sunxi-fel-4k-chunks  sunxi-fel-h713-fixed  sunxi-tools-h713-support.patch
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
configs/: build_hy300_uboot_usb.sh  hy300_boot_usb_serial.txt  hy300_h713_defconfig  hy300_kernel_defconfig  (+1 more)
pvr.hdmi-input/: CMakeLists.txt  addon.xml
pvr.hdmi-input/src/: addon.cpp  channel_manager.cpp  channel_manager.h  hdmi_client.cpp  hdmi_client.h  signal_monitor.cpp  signal_monitor.h  stream_processor.cpp  stream_processor.h  types.h  v4l2_device.cpp  v4l2_device.h
(+277 files in other folders)
